--- a/src/templates/angular-schema-form-ui-datepicker.html
+++ b/src/templates/angular-schema-form-ui-datepicker.html
@@ -2,12 +2,9 @@
     class="form-group {{::form.htmlClass + ' ' + idClass}} schema-form-ui-datepicker"
     ng-class="{'has-error': form.disableErrorState !== true && hasError(), 'has-success': form.disableSuccessState !== true && hasSuccess(), 'has-feedback': form.feedback !== false}">
     <!-- Surrounding DIV for sfField builder to add a sfField directive to. -->
-    <h2>{{form.dateOptions}}</h2>
-    <!-- Create your own form options -->
 
-    <label class="control-label {{::form.labelHtmlClass}}" ng-show="showTitle()" for="{{::fieldId(true, false)}}">
-        {{form.title}}
-    </label>
+    <!-- Create your own form options -->
+    <label class="control-label {{::form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}" for="{{::fieldId(true, false)}}">{{form.title}}</label>
 
     <ui-datepicker datepicker-options="{{form.dateOptions}}" datename="{{::fieldId(true, false)}}" ng-disabled="form.readonly" sf-changed="form" ng-model="ngModel" sf-field-model schema-validate="form"></ui-datepicker>
 
