--- a/src/templates/angular-schema-form-ui-datepicker.html
+++ b/src/templates/angular-schema-form-ui-datepicker.html
@@ -4,7 +4,7 @@
     <!-- Surrounding DIV for sfField builder to add a sfField directive to. -->
 
     <!-- Create your own form options -->
-    <label class="control-label {{::form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}" for="{{::fieldId(true, false)}}">{{form.title}}</label>
+    <label class="control-label {{::form.labelHtmlClass}}" ng-class="showTitle()" for="{{::fieldId(true, false)}}">{{form.title}}</label>
 
     <ui-datepicker datepicker-options="{{form.dateOptions}}" datename="{{::fieldId(true, false)}}" ng-disabled="form.readonly" sf-changed="form" ng-model="ngModel" sf-field-model schema-validate="form"></ui-datepicker>
 
